단어 집계시에 불용어 제외를 위한 로직 추가 ElasticSearch 쿼리시에 Redis내 불용어 목록 제외
